Fix the colour of the buttons. Trying to get text aligned to middle of button Trying to get buttons placed correctly.

--- a/portfolio/src/main/resources/static/css/body.css
+++ b/portfolio/src/main/resources/static/css/body.css
@@ -42,12 +42,40 @@ css for the body of each page
     padding-left: 50px;
     padding-bottom: 0px;
     margin-bottom: 0px;
+    vertical-align: middle;
 }
 
 .page-title {
-    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     background-color: #F0B92A;
     border-radius: 15px;
-    height: 50px;
+    height: 140px;
     padding-top: 6px;
+}
+
+a.project-name {
+    font-size: 20px;
+    color: #07173B;
+}
+
+.btn {
+    border-color: #07173B !important;
+    width: 320px;
+    height: 32px;
+    border-radius: 40px !important;
+    font-size: 20px !important;
+    justify-content: center;
+}
+
+.btn-primary {
+    background-color: #07173B !important;
+    vertical-align: middle !important;
+}
+
+.btn-secondary {
+    color: #07173B !important;
+    background-color: transparent !important;
+
 }
