--- a/portfolio/src/main/resources/static/css/header.css
+++ b/portfolio/src/main/resources/static/css/header.css
@@ -13,9 +13,8 @@ header, sidebar
     padding: 20px;
     overflow-x: hidden;
     overflow-y: auto; /* Scrollable contents if viewport is shorter than content. */
-    background-color: #f5f5f5;
+    background-color: #CEDCE6;
     border-right: 1px solid #eee;
-
     width:250px;
 
 }
